fix: themer layout issues (#596)

--- a/src/components/UISamples/KubernetesPreview/KubernetesPreview.scss
+++ b/src/components/UISamples/KubernetesPreview/KubernetesPreview.scss
@@ -22,6 +22,10 @@ $block: '.#{variables.$ns}kubernetes-preview';
         }
     }
 
+    &__menu {
+        text-wrap: nowrap;
+    }
+
     &__grow {
         flex-grow: 1;
     }
