--- a/src/components/UISamples/TablePreview/TablePreview.scss
+++ b/src/components/UISamples/TablePreview/TablePreview.scss
@@ -7,6 +7,10 @@ $block: '.#{variables.$ns}table-preview';
 #{$block} {
     width: 900px;
 
+    &__preview-wrapper {
+        width: 100%;
+    }
+
     &__wrapper {
         overflow-x: hidden;
     }
@@ -15,14 +19,5 @@ $block: '.#{variables.$ns}table-preview';
         max-width: 100%;
         overflow-x: auto;
         white-space: nowrap;
-    }
-
-    &__loader {
-        width: 100%;
-        height: 100%;
-
-        display: flex;
-        justify-content: center;
-        align-items: center;
     }
 }
